tests/valid/definite/VarDecl_Valid_1.whiley
void System::main([string] args):
    int x = 1
    print str(x)
